--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'United States -- History -- Civil War, 1861-1865 -- Regimental histories'
 - !lcsh 'United States -- History -- Civil War, 1861-1865 -- Personal narratives'
 - !lcsh 'Ohio -- History -- Civil War, 1861-1865 -- Regimental histories'
+- GITenberg
 title: "Bugle Blasts\r\nRead before the Ohio Commandery of the Military Order of the\
   \ Loyal Legion of the United States"
 url: http://www.gutenberg.org/ebooks/31049
